# fro-shared

./: pyproject.toml
docs/: schemas.md
fro_shared/: __init__.py  events_v2.py  session_meta.py
tests/: test_events_v2.py  test_session_meta.py
