[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fro-shared"
version = "0.1.1"
description = "Shared DL / session contracts for FRO (events v2, SessionMeta)"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["fro_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["fro_shared"]
